[tool.poetry]
name = "controls"
version = "0.1.0"
description = ""
authors = ["Ian Thomas <thomasian06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
pygame = "^2.5.2"
pandas = "^1.3.5"
matplotlib = "^3.5.3"
websocket-client = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
